tests/negative/test_decl_glob_not_baked.orb
import "tests/io.orb";

let (x:i32 (scan_i32));

fnc main() () {};